versions/v4.1.0/boards/enjoydigital/litex_vexriscv/doc/index.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/boards/enjoydigital/litex_vexriscv/doc/index.html
original_path: boards/enjoydigital/litex_vexriscv/doc/index.html
---

# LiteX VexRiscv

Board Overview

[![../../../../_images/litex_vexriscv.jpg](https://docs.zephyrproject.org/4.1.0/_images/litex_vexriscv.jpg)
](https://docs.zephyrproject.org/4.1.0/_images/litex_vexriscv.jpg)

LiteX VexRiscv

Name:
:   `litex_vexriscv`

Vendor:
:   EnjoyDigital

Architecture:
:   riscv

SoC:
:   litex\_vexriscv

[
Browse board sources
](https://github.com/zephyrproject-rtos/zephyr/blob/main//boards/enjoydigital/litex_vexriscv/doc/index.rst/../..)

LiteX VexRiscv is an example of a system on a chip (SoC) that consists of
a [VexRiscv processor](https://github.com/SpinalHDL/VexRiscv)
and additional peripherals. This setup can be generated using
[Zephyr on LiteX VexRiscv (reference platform)](https://github.com/litex-hub/zephyr-on-litex-vexriscv)
or [LiteX SoC Builder](https://github.com/enjoy-digital/litex)
and can be used on various FPGA chips.
The bitstream (FPGA configuration file) can be obtained using both
vendor-specific and open-source tools, including the
[F4PGA toolchain](https://f4pga.org/).

The `litex_vexriscv` board configuration in Zephyr is meant for the
LiteX VexRiscv SoC implementation generated for the
[Digilent Arty A7-35T or A7-100T Development Boards](https://store.digilentinc.com/arty-a7-artix-7-fpga-development-board-for-makers-and-hobbyists)
or [SDI-MIPI Video Converter](https://github.com/antmicro/sdi-mipi-video-converter).

LiteX is based on
[Migen](https://m-labs.hk/gateware/migen/)/[MiSoC SoC builder](https://github.com/m-labs/misoc)
and provides ready-made system components such as buses, streams, interconnects,
common cores, and CPU wrappers to create SoCs easily. The tool contains
mechanisms for integrating, simulating, and building various designs
that target multiple chips of different vendors.
More information about the LiteX project can be found on
[LiteX’s website](https://github.com/enjoy-digital/litex).

VexRiscv is a 32-bit implementation of the RISC-V CPU architecture
written in the [SpinalHDL](https://spinalhdl.github.io/SpinalDoc-RTD/).
The processor supports M, C, and A RISC-V instruction
set extensions, with numerous optimizations that include multistage
pipelines and data caching. The project provides many optional extensions
that can be used to customize the design (JTAG, MMU, MUL/DIV extensions).
The implementation is optimized for FPGA chips.
More information about the project can be found on
[VexRiscv’s website](https://github.com/SpinalHDL/VexRiscv).

To run the ZephyrOS on the VexRiscv CPU, it is necessary to prepare the
bitstream for the FPGA on a Digilent Arty A7-35 Board or SDI-MIPI Video Converter. This can be achieved
using the
[Zephyr on LiteX VexRiscv](https://github.com/litex-hub/zephyr-on-litex-vexriscv)
reference platform. You can also use the official LiteX SoC Builder.

## Supported Features

The `litex_vexriscv` board supports the hardware features listed below.

on-chip / on-board
:   Feature integrated in the SoC / present on the board.

2 / 2
:   Number of instances that are enabled / disabled.   
    Click on the label to see the first instance of this feature in the board/SoC DTS files.

`vnd,foo`
:   Compatible string for the Devicetree binding matching the feature.   
    Click on the link to view the binding documentation.

### `litex_vexriscv/litex_vexriscv` target

| Type | Location | Description | Compatible |
| --- | --- | --- | --- |
| CPU | on-chip | VexRiscv core with the standard configuration as used by LiteX[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L23) | [`litex,vexriscv-standard`](../../../../build/dts/api/bindings/cpu/litex%2Cvexriscv-standard.md#std-dtcompatible-litex-vexriscv-standard) |
| Clock control | on-chip | LiteX Mixed Mode Clock Manager clock output binding[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L330) | [`litex,clkout`](../../../../build/dts/api/bindings/clock/litex%2Cclkout.md#std-dtcompatible-litex-clkout) |
| on-chip | LiteX Mixed Mode Clock Manager Common clock driver with MMCM unit for dynamic reconfiguration of up to 7 clock outputs with ability to change frequency, duty cycle and phase offset[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L357) | [`litex,clk`](../../../../build/dts/api/bindings/clock/litex%2Cclk.md#std-dtcompatible-litex-clk) |
| Ethernet | on-chip | Generic MII PHY[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L176) | [`ethernet-phy`](../../../../build/dts/api/bindings/ethernet/ethernet-phy.md#std-dtcompatible-ethernet-phy) |
| on-chip | LiteX Ethernet[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L181) | [`litex,liteeth`](../../../../build/dts/api/bindings/ethernet/litex%2Cliteeth.md#std-dtcompatible-litex-liteeth) |
| GPIO & Headers | on-chip | Litex GPIO[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L239) | [`litex,gpio`](../../../../build/dts/api/bindings/gpio/litex%2Cgpio.md#std-dtcompatible-litex-gpio) |
| Hardware information | on-chip | LiteX DNA ID reader[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L219) | [`litex,dna0`](../../../../build/dts/api/bindings/hwinfo/litex%2Cdna0.md#std-dtcompatible-litex-dna0) |
| I2C | on-chip | LiteX I2C controller[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L230) | [`litex,i2c`](../../../../build/dts/api/bindings/i2c/litex%2Ci2c.md#std-dtcompatible-litex-i2c) |
| I2S | on-chip | LiteX I2S controller[2 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L281) | [`litex,i2s`](../../../../build/dts/api/bindings/i2s/litex%2Ci2s.md#std-dtcompatible-litex-i2s) |
| Interrupt controller | on-chip | LiteX VexRiscV interrupt controller[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L46) | [`litex,vexriscv-intc0`](../../../../build/dts/api/bindings/interrupt-controller/litex%2Cvexriscv-intc0.md#std-dtcompatible-litex-vexriscv-intc0) |
| MDIO | on-chip | LiteX LiteEth MDIO bitbang driver[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L164) | [`litex,liteeth-mdio`](../../../../build/dts/api/bindings/mdio/litex%2Cliteeth-mdio.md#std-dtcompatible-litex-liteeth-mdio) |
| MTD | on-chip | Properties supporting Zephyr spi-nor flash driver (over the Zephyr SPI API) control of serial flash memories using the standard M25P80-based command set[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L114) | [`jedec,spi-nor`](../../../../build/dts/api/bindings/mtd/jedec%2Cspi-nor.md#std-dtcompatible-jedec-spi-nor) |
| PWM | on-chip | LiteX PWM controller[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L274) | [`litex,pwm`](../../../../build/dts/api/bindings/pwm/litex%2Cpwm.md#std-dtcompatible-litex-pwm) |
| RISC-V architecture | on-chip | LiteX SoC Controller driver[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L37) | [`litex,soc-controller`](../../../../build/dts/api/bindings/riscv/litex%2Csoc-controller.md#std-dtcompatible-litex-soc-controller) |
| RNG | on-chip | LiteX PRBS[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L268) | [`litex,prbs`](../../../../build/dts/api/bindings/rng/litex%2Cprbs.md#std-dtcompatible-litex-prbs) |
| Serial controller | on-chip | LiteX UART[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L55) | [`litex,uart`](../../../../build/dts/api/bindings/serial/litex%2Cuart.md#std-dtcompatible-litex-uart) |
| SPI | on-chip | LiteX SPI[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L78) | [`litex,spi`](../../../../build/dts/api/bindings/spi/litex%2Cspi.md#std-dtcompatible-litex-spi) |
| on-chip | LiteX SPI LiteSPI Controller[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L96) | [`litex,spi-litespi`](../../../../build/dts/api/bindings/spi/litex%2Cspi-litespi.md#std-dtcompatible-litex-spi-litespi) |
| Timer | on-chip | LiteX timer[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L120) | [`litex,timer0`](../../../../build/dts/api/bindings/timer/litex%2Ctimer0.md#std-dtcompatible-litex-timer0) |
| Watchdog | on-chip | LiteX watchdog[1 ](https://github.com/zephyrproject-rtos/zephyr/blob/main/dts/riscv/riscv32-litex-vexriscv.dtsi?plain=1#L147) | [`litex,watchdog`](../../../../build/dts/api/bindings/watchdog/litex%2Cwatchdog.md#std-dtcompatible-litex-watchdog) |

## Bitstream generation

### Zephyr on LiteX VexRiscv

Using this platform ensures that all registers addresses are in the proper place.
All drivers were tested using this platform.
In order to generate the bitstream,
proceed with the following instruction:

1. Clone the repository and update all submodules:

   ```shell
   git clone https://github.com/litex-hub/zephyr-on-litex-vexriscv.git
   cd zephyr-on-litex-vexriscv
   git submodule update --init --recursive
   ```

   Generating the bitstream for the Digilent Arty A7-35 Board requires F4PGA toolchain installation. It can be done by following instructions in
   [this tutorial](https://f4pga-examples.readthedocs.io/en/latest/getting.html).

   In order to generate the bitstream for the SDI-MIPI Video Converter, install
   oxide (yosys+nextpnr) toolchain by following
   [these instructions](https://github.com/gatecat/prjoxide#getting-started---complete-flow).
2. Next, get all required packages and run the install script:

   ```shell
   apt-get install build-essential bzip2 python3 python3-dev python3-pip
   ./install.sh
   ```
3. Add LiteX to path:

   ```shell
   source ./init
   ```
4. Set up the F4PGA environment (for the Digilent Arty A7-35 Board):

   ```shell
   export F4PGA_INSTALL_DIR=~/opt/f4pga
   export FPGA_FAM="xc7"
   export PATH="$F4PGA_INSTALL_DIR/$FPGA_FAM/install/bin:$PATH";
   source "$F4PGA_INSTALL_DIR/$FPGA_FAM/conda/etc/profile.d/conda.sh"
   conda activate $FPGA_FAM
   ```
5. Generate the bitstream for the Arty 35T:

   ```shell
   ./make.py --board=arty --variant=a7-35 --build --toolchain=symbiflow
   ```
6. Generate the bitstream for the Arty 100T:

   ```shell
   ./make.py --board=arty --variant=a7-100 --build --toolchain=symbiflow
   ```
7. Generate the bitstream for the SDI-MIPI Video Converter:

   ```shell
   ./make.py --board=sdi_mipi_bridge --build --toolchain=oxide
   ```

### Official LiteX SoC builder

You can also generate the bitstream using the [official LiteX repository](https://github.com/enjoy-digital/litex).
In that case you must also generate a dts overlay.

1. Install Migen/LiteX and the LiteX’s cores:

   ```shell
   wget https://raw.githubusercontent.com/enjoy-digital/litex/master/litex_setup.py
   chmod +x litex_setup.py
   ./litex_setup.py --init --install --user (--user to install to user directory) --config=(minimal, standard, full)
   ```
2. Install the RISC-V toolchain:

   ```shell
   pip3 install meson ninja
   ./litex_setup.py --gcc=riscv
   ```
3. Build the target:

   ```shell
   ./litex-boards/litex_boards/targets/digilent_arty.py --build --timer-uptime --csr-json csr.json
   ```
4. Generate the dts and config overlay:

   ```shell
   ./litex/litex/tools/litex_json2dts_zephyr.py --dts overlay.dts --config overlay.config csr.json
   ```

## Programming and booting

### Building

Applications for the `litex_vexriscv` board configuration can be built as usual
(see [Building an Application](../../../../develop/application/index.md#build-an-application)).
In order to build the application for `litex_vexriscv`, set the `BOARD` variable
to `litex_vexriscv`.

If you were generating bitstream with the official LiteX SoC builder you need to pass an additional argument:

```shell
west build -b litex_vexriscv path/to/app -DDTC_OVERLAY_FILE=path/to/overlay.dts
```

### Booting

To upload the bitstream to Digilent Arty A7-35 you can use [xc3sprog](https://github.com/matrix-io/xc3sprog) or
[openFPGALoader](https://github.com/trabucayre/openFPGALoader):

```shell
xc3sprog -c nexys4 digilent_arty.bit
```

```shell
openFPGALoader -b arty_a7_100t digilent_arty.bit
```

Use [ecpprog](https://github.com/gregdavill/ecpprog) to upload the bitstream to SDI-MIPI Video Converter:

```shell
ecpprog -S antmicro_sdi_mipi_video_converter.bit
```

You can boot from a serial port using litex\_term (replace `ttyUSBX` with your device) , e.g.:

```shell
litex_term /dev/ttyUSBX --speed 115200 --kernel zephyr.bin
```
